style(ruff): resolve all outstanding default violations (#68)

--- a/Quickstart.ipynb
+++ b/Quickstart.ipynb
@@ -62,7 +62,7 @@
     "from agent_gateway import Agent\n",
     "from agent_gateway.tools import CortexSearchTool, CortexAnalystTool, PythonTool\n",
     "from snowflake.snowpark import Session\n",
-    "import os, time\n",
+    "import os\n",
     "\n",
     "connection_parameters = {\n",
     "    \"account\": os.getenv(\"SNOWFLAKE_ACCOUNT\"),\n",
@@ -136,7 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests, json\n",
+    "import requests\n",
+    "import json\n",
     "\n",
     "\n",
     "class NewsTool:\n",
