--- a/Quickstart.ipynb
+++ b/Quickstart.ipynb
@@ -577,10 +577,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-12 08:46:32,898 - AgentGatewayLogger - INFO - Cortex Search Tool successfully initialized\n",
-      "2025-03-12 08:46:32,899 - AgentGatewayLogger - INFO - Cortex Analyst Tool successfully initialized\n",
-      "2025-03-12 08:46:32,900 - AgentGatewayLogger - INFO - Python Tool successfully initialized\n",
-      "2025-03-12 08:46:32,901 - AgentGatewayLogger - INFO - Cortex gateway successfully initialized\n"
+      "2025-03-12 13:01:24,121 - AgentGatewayLogger - INFO - Cortex Search Tool successfully initialized\n",
+      "2025-03-12 13:01:24,123 - AgentGatewayLogger - INFO - Cortex Analyst Tool successfully initialized\n",
+      "2025-03-12 13:01:24,124 - AgentGatewayLogger - INFO - Python Tool successfully initialized\n",
+      "2025-03-12 13:01:24,125 - AgentGatewayLogger - INFO - Cortex gateway successfully initialized\n"
      ]
     }
    ],
@@ -620,27 +620,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'output': \"{'MARKETCAP': [3019131060224]}\",\n",
-       " 'sources': [{'TABLE': 'cube_testing.public.sp500'}]}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "await sp500(\"what is the market cap of Apple\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -648,7 +627,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-12 08:46:41,038 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
+      "2025-03-12 13:01:33,436 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
      ]
     },
     {
@@ -676,14 +655,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-12 08:46:51,216 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n",
-      "2025-03-12 08:46:51,220 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
+      "2025-03-12 13:01:43,665 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n",
+      "2025-03-12 13:01:43,670 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'output': 'Apple has a bigger EBITDA than Microsoft.',\n",
+       "{'output': \"Apple has the bigger EBITDA with $129,629,003,776 compared to Microsoft's $125,981,999,104.\",\n",
        " 'sources': {'TABLE': ['cube_testing.public.sp500']}}"
       ]
      },
@@ -705,14 +684,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-12 08:48:25,054 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n"
+      "2025-03-12 13:01:57,719 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n"
      ]
     },
     {
@@ -725,7 +704,7 @@
        "   '2021_10k_snowflake.pdf']}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,14 +715,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-12 08:48:31,970 - AgentGatewayLogger - INFO - running html_crawl task\n"
+      "2025-03-12 13:02:05,708 - AgentGatewayLogger - INFO - running html_crawl task\n"
      ]
     },
     {
@@ -753,7 +732,7 @@
        " 'sources': {'Custom Tools': ['html_crawl tool']}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,16 +752,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-12 08:50:23,282 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n",
-      "2025-03-12 08:50:24,649 - AgentGatewayLogger - INFO - running summarize task\n",
-      "2025-03-12 08:50:26,372 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
+      "2025-03-12 13:02:23,093 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n",
+      "2025-03-12 13:02:24,712 - AgentGatewayLogger - INFO - running summarize task\n",
+      "2025-03-12 13:02:26,484 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
      ]
     },
     {
@@ -797,14 +776,14 @@
        "  'TABLE': [None, None, None, None, 'cube_testing.public.sp500']}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "agent(\n",
-    "    \"What is the market cap of the cloud providers mentioned in Snowflake's annual report?\"\n",
+    "    \"What is the market cap of each of the cloud providers mentioned in Snowflake's annual report?\"\n",
     ")"
    ]
   }
