Eliminating langchain deps (#114)
* langchain cleanup

* updating uv.lock, project toml

* directory cleanup

* chore: remove extra .gitignore file

---------

Co-authored-by: Tyler White <tyler.white@snowflake.com>

--- a/Quickstart.ipynb
+++ b/Quickstart.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,17 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:AgentGatewayLogger:Cortex Search Tool successfully initialized\n",
-      "INFO:AgentGatewayLogger:Cortex Analyst Tool successfully initialized\n",
-      "INFO:AgentGatewayLogger:Python Tool successfully initialized\n",
-      "INFO:AgentGatewayLogger:Cortex gateway successfully initialized\n"
+      "2025-03-12 18:53:47,734 - AgentGatewayLogger - INFO - Cortex Search Tool successfully initialized\n",
+      "2025-03-12 18:53:47,735 - AgentGatewayLogger - INFO - Cortex Analyst Tool successfully initialized\n",
+      "2025-03-12 18:53:47,736 - AgentGatewayLogger - INFO - Python Tool successfully initialized\n",
+      "2025-03-12 18:53:47,737 - AgentGatewayLogger - INFO - Cortex gateway successfully initialized\n"
      ]
     }
    ],
@@ -209,23 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:AgentGatewayLogger:running sp500_semantic_model_cortexanalyst task\n"
+      "2025-03-12 18:53:51,997 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'The market cap of Apple is $3,019,131,060,224 or approximately $3.02 trillion.'"
+       "'The market cap of Apple is $3,019,131,060,224.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,24 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:AgentGatewayLogger:running sp500_semantic_model_cortexanalyst task\n",
-      "INFO:AgentGatewayLogger:running sp500_semantic_model_cortexanalyst task\n"
+      "2025-03-12 18:54:02,991 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n",
+      "2025-03-12 18:54:02,994 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "\"Apple has the bigger EBITDA with $129,629,003,776 compared to Microsoft's $125,981,999,104.\""
+       "'Apple has a bigger EBITDA than Microsoft.'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:AgentGatewayLogger:running sec_search_service_cortexsearch task\n"
+      "2025-03-12 18:54:13,290 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n"
      ]
     },
     {
@@ -287,7 +287,7 @@
        "'As of January 31, 2024, Snowflake had 9,437 total customers.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:AgentGatewayLogger:running html_crawl task\n"
+      "2025-03-12 18:54:19,584 - AgentGatewayLogger - INFO - running html_crawl task\n"
      ]
     },
     {
@@ -314,7 +314,7 @@
        "'Snowflake can be hosted on Amazon Web Services (AWS), Google Cloud Platform (GCP), and Microsoft Azure (Azure).'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,46 +334,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:AgentGatewayLogger:running sec_search_service_cortexsearch task\n",
-      "INFO:AgentGatewayLogger:running summarize task\n",
-      "INFO:AgentGatewayLogger:running sp500_semantic_model_cortexanalyst task\n",
-      "ERROR:AgentGatewayLogger:Your request is unclear. Consider rephrasing your request to one of the following suggestions:['What is the market cap of Amazon.com, Inc.?', 'What is the market cap of Microsoft Corporation?', 'What is the market cap of Alphabet Inc.?']\n",
-      "ERROR:AgentGatewayLogger:{'content': [{'text': 'I apologize, but the question is unclear because it '\n",
-      "                      'asks for the market cap of Amazon Web Services (AWS), '\n",
-      "                      'Microsoft Azure, and Google Cloud Platform (GCP), which '\n",
-      "                      'are specific business units or services within larger '\n",
-      "                      'companies (Amazon, Microsoft, and Alphabet '\n",
-      "                      'respectively). The semantic model provided does not '\n",
-      "                      'have a direct way to filter or identify these specific '\n",
-      "                      'business units or services.',\n",
-      "              'type': 'text'},\n",
-      "             {'suggestions': ['What is the market cap of Amazon.com, Inc.?',\n",
-      "                              'What is the market cap of Microsoft '\n",
-      "                              'Corporation?',\n",
-      "                              'What is the market cap of Alphabet Inc.?'],\n",
-      "              'type': 'suggestions'}],\n",
-      " 'role': 'analyst'}\n",
-      "INFO:AgentGatewayLogger:running sp500_semantic_model_cortexanalyst task\n",
-      "INFO:AgentGatewayLogger:running sp500_semantic_model_cortexanalyst task\n",
-      "INFO:AgentGatewayLogger:running sp500_semantic_model_cortexanalyst task\n",
-      "ERROR:AgentGatewayLogger:Rate limit exceeded\n",
-      "INFO:AgentGatewayLogger:running sp500_semantic_model_cortexanalyst task\n"
+      "2025-03-12 18:54:36,542 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n",
+      "2025-03-12 18:54:37,251 - AgentGatewayLogger - INFO - running summarize task\n",
+      "2025-03-12 18:54:43,381 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'The market cap of Amazon.com, Inc. is $1,917,936,336,896, the market cap of Microsoft Corporation is $3,150,184,448,000, and the market cap of Alphabet Inc. is $2,164,350,779,392.'"
+       "\"The market cap of the cloud providers mentioned in Snowflake's annual report are: Microsoft Corporation (Azure) - $3,150,184,448,000, Alphabet Inc. (Google Cloud Platform) - $2,164,350,779,392, and Amazon.com, Inc. (AWS) - $1,917,936,336,896.\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
