updating citations + replan output

--- a/Quickstart.ipynb
+++ b/Quickstart.ipynb
@@ -54,6 +54,8 @@
                 "from agent_gateway.tools import CortexSearchTool, CortexAnalystTool, PythonTool\n",
                 "from snowflake.snowpark import Session\n",
                 "import os\n",
+                "from dotenv import load_dotenv\n",
+                "load_dotenv()\n",
                 "\n",
                 "connection_parameters = {\n",
                 "    \"account\": os.getenv(\"SNOWFLAKE_ACCOUNT\"),\n",
@@ -92,7 +94,7 @@
                 "    \"service_name\": \"SEC_SEARCH_SERVICE\",\n",
                 "    \"service_topic\": \"Snowflake's business,product offerings,and performance.\",\n",
                 "    \"data_description\": \"Snowflake annual reports\",\n",
-                "    \"retrieval_columns\": [\"CHUNK\", \"RELATIVE_PATH\"],\n",
+                "    \"retrieval_columns\": [\"CHUNK\",\"RELATIVE_PATH\"],\n",
                 "    \"snowflake_connection\": snowpark,\n",
                 "    \"k\": 10,\n",
                 "}\n",
@@ -130,11 +132,9 @@
             "source": [
                 "import requests\n",
                 "\n",
-                "\n",
                 "def html_crawl(url):\n",
                 "    response = requests.get(url)\n",
                 "    return response.text\n",
-                "\n",
                 "\n",
                 "python_crawler_config = {\n",
                 "    \"tool_description\": \"reads the html from a given URL or website\",\n",
@@ -166,10 +166,10 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "2025-03-12 13:01:24,121 - AgentGatewayLogger - INFO - Cortex Search Tool successfully initialized\n",
-                        "2025-03-12 13:01:24,123 - AgentGatewayLogger - INFO - Cortex Analyst Tool successfully initialized\n",
-                        "2025-03-12 13:01:24,124 - AgentGatewayLogger - INFO - Python Tool successfully initialized\n",
-                        "2025-03-12 13:01:24,125 - AgentGatewayLogger - INFO - Cortex gateway successfully initialized\n"
+                        "2025-03-13 17:24:15,091 - AgentGatewayLogger - INFO - Cortex Search Tool successfully initialized\n",
+                        "2025-03-13 17:24:15,092 - AgentGatewayLogger - INFO - Cortex Analyst Tool successfully initialized\n",
+                        "2025-03-13 17:24:15,093 - AgentGatewayLogger - INFO - Python Tool successfully initialized\n",
+                        "2025-03-13 17:24:15,094 - AgentGatewayLogger - INFO - Cortex gateway successfully initialized\n"
                     ]
                 }
             ],
@@ -209,24 +209,26 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "2025-03-12 13:01:33,436 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
+                        "2025-03-13 17:24:22,280 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
                     ]
                 },
                 {
                     "data": {
                         "text/plain": [
                             "{'output': 'The market cap of Apple is $3,019,131,060,224 or approximately $3.02 trillion.',\n",
-                            " 'sources': {'TABLE': ['cube_testing.public.sp500']}}"
+                            " 'sources': [{'tool_type': 'cortex_analyst',\n",
+                            "   'tool_name': 'sp500_semantic_model_cortexanalyst',\n",
+                            "   'metadata': [{'Table': 'cube_testing.public.sp500'}]}]}"
                         ]
                     },
-                    "execution_count": 6,
+                    "execution_count": 5,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -237,25 +239,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "2025-03-12 13:01:43,665 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n",
-                        "2025-03-12 13:01:43,670 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
+                        "2025-03-13 17:24:33,011 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n",
+                        "2025-03-13 17:24:33,012 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
                     ]
                 },
                 {
                     "data": {
                         "text/plain": [
-                            "{'output': \"Apple has the bigger EBITDA with $129,629,003,776 compared to Microsoft's $125,981,999,104.\",\n",
-                            " 'sources': {'TABLE': ['cube_testing.public.sp500']}}"
+                            "{'output': \"Apple has a bigger EBITDA of $129,629,003,776 compared to Microsoft's $125,981,999,104.\",\n",
+                            " 'sources': [{'tool_type': 'cortex_analyst',\n",
+                            "   'tool_name': 'sp500_semantic_model_cortexanalyst',\n",
+                            "   'metadata': [{'Table': 'cube_testing.public.sp500'}]}]}"
                         ]
                     },
-                    "execution_count": 7,
+                    "execution_count": 6,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -273,27 +277,29 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "2025-03-12 13:01:57,719 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n"
+                        "2025-03-13 17:24:49,879 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n"
                     ]
                 },
                 {
                     "data": {
                         "text/plain": [
                             "{'output': 'As of January 31, 2024, Snowflake had 9,437 total customers.',\n",
-                            " 'sources': {'RELATIVE_PATH': ['2024_10k_snowflake.pdf',\n",
-                            "   '2023_10k_snowflake.pdf',\n",
-                            "   '2022_10k_snowflake.pdf',\n",
-                            "   '2021_10k_snowflake.pdf']}}"
+                            " 'sources': [{'tool_type': 'cortex_search',\n",
+                            "   'tool_name': 'sec_search_service_cortexsearch',\n",
+                            "   'metadata': [{'RELATIVE_PATH': '2024_10k_snowflake.pdf'},\n",
+                            "    {'RELATIVE_PATH': '2023_10k_snowflake.pdf'},\n",
+                            "    {'RELATIVE_PATH': '2022_10k_snowflake.pdf'},\n",
+                            "    {'RELATIVE_PATH': '2021_10k_snowflake.pdf'}]}]}"
                         ]
                     },
-                    "execution_count": 8,
+                    "execution_count": 7,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -304,24 +310,26 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "2025-03-12 13:02:05,708 - AgentGatewayLogger - INFO - running html_crawl task\n"
+                        "2025-03-13 17:24:57,337 - AgentGatewayLogger - INFO - running html_crawl task\n"
                     ]
                 },
                 {
                     "data": {
                         "text/plain": [
                             "{'output': 'Snowflake can be hosted on the following cloud platforms: Amazon Web Services (AWS), Google Cloud Platform (GCP), and Microsoft Azure (Azure).',\n",
-                            " 'sources': {'Custom Tools': ['html_crawl tool']}}"
+                            " 'sources': [{'tool_type': 'custom_tool',\n",
+                            "   'tool_name': 'html_crawl',\n",
+                            "   'metadata': [None]}]}"
                         ]
                     },
-                    "execution_count": 9,
+                    "execution_count": 8,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -341,31 +349,38 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "2025-03-12 13:02:23,093 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n",
-                        "2025-03-12 13:02:24,712 - AgentGatewayLogger - INFO - running summarize task\n",
-                        "2025-03-12 13:02:26,484 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
+                        "2025-03-13 17:25:14,329 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n",
+                        "2025-03-13 17:25:15,815 - AgentGatewayLogger - INFO - running summarize task\n",
+                        "2025-03-13 17:25:17,261 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n",
+                        "2025-03-13 17:25:21,736 - AgentGatewayLogger - ERROR - Your request is unclear. Consider rephrasing your request to one of the following suggestions: ['What is the market cap of Amazon.com, Inc., Microsoft Corporation, and Alphabet Inc.?', 'What is the market cap of the companies that own Amazon Web Services (AWS), Microsoft Azure, and Google Cloud Platform (GCP)?']\n",
+                        "2025-03-13 17:25:30,092 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n",
+                        "2025-03-13 17:25:33,332 - AgentGatewayLogger - ERROR - Unable to generate a valid SQL Query. The question is asking for the market cap of companies that own Amazon Web Services (AWS), but the semantic data model does not provide information about the ownership of AWS or any other subsidiary relationships. Therefore, it is unclear how to determine which companies own AWS based on the given schema.\n",
+                        "2025-03-13 17:25:41,677 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
                     ]
                 },
                 {
                     "data": {
                         "text/plain": [
-                            "{'output': \"The market cap of the cloud providers mentioned in Snowflake's annual report are as follows: Microsoft Corporation (MSFT) has a market cap of $3,150,184,448,000, Alphabet Inc. (GOOGL) has a market cap of $2,164,350,779,392, and Amazon.com, Inc. (AMZN) has a market cap of $1,917,936,336,896.\",\n",
-                            " 'sources': {'RELATIVE_PATH': ['2023_10k_snowflake.pdf',\n",
-                            "   '2024_10k_snowflake.pdf',\n",
-                            "   '2022_10k_snowflake.pdf',\n",
-                            "   '2021_10k_snowflake.pdf',\n",
-                            "   None],\n",
-                            "  'TABLE': [None, None, None, None, 'cube_testing.public.sp500']}}"
+                            "{'output': 'The market cap of Amazon.com, Inc. is $1,917,936,336,896, the market cap of Microsoft Corporation is $3,150,184,448,000, and the market cap of Alphabet Inc. is $2,164,350,779,392.',\n",
+                            " 'sources': [{'tool_type': 'cortex_search',\n",
+                            "   'tool_name': 'sec_search_service_cortexsearch',\n",
+                            "   'metadata': [{'RELATIVE_PATH': '2023_10k_snowflake.pdf'},\n",
+                            "    {'RELATIVE_PATH': '2024_10k_snowflake.pdf'},\n",
+                            "    {'RELATIVE_PATH': '2022_10k_snowflake.pdf'},\n",
+                            "    {'RELATIVE_PATH': '2021_10k_snowflake.pdf'}]},\n",
+                            "  {'tool_type': 'cortex_analyst',\n",
+                            "   'tool_name': 'sp500_semantic_model_cortexanalyst',\n",
+                            "   'metadata': [{'Table': 'cube_testing.public.sp500'}]}]}"
                         ]
                     },
-                    "execution_count": 10,
+                    "execution_count": 9,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
