--- a/Quickstart.ipynb
+++ b/Quickstart.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,18 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 13:48:11,284 - AgentGatewayLogger - INFO - Cortex Search Tool successfully initialized\n",
-      "2025-03-25 13:48:11,541 - AgentGatewayLogger - INFO - Cortex Analyst Tool successfully initialized\n",
-      "2025-03-25 13:48:11,544 - AgentGatewayLogger - INFO - Python Tool successfully initialized\n",
-      "2025-03-25 13:48:11,546 - AgentGatewayLogger - INFO - SQL Tool successfully initialized\n",
-      "2025-03-25 13:48:12,057 - AgentGatewayLogger - INFO - Cortex gateway successfully initialized\n"
+      "2025-05-15 14:08:43,018 - AgentGatewayLogger - INFO - Cortex Search Tool successfully initialized\n",
+      "2025-05-15 14:08:43,019 - AgentGatewayLogger - INFO - Cortex Analyst Tool successfully initialized\n",
+      "2025-05-15 14:08:43,023 - AgentGatewayLogger - INFO - Python Tool successfully initialized\n",
+      "2025-05-15 14:08:43,024 - AgentGatewayLogger - INFO - SQL Tool successfully initialized\n",
+      "2025-05-15 14:08:43,468 - AgentGatewayLogger - INFO - Cortex gateway successfully initialized\n"
      ]
     }
    ],
@@ -263,6 +263,11 @@
     "snowflake_tools = [annual_reports, sp500, web_crawler, margin_eval]\n",
     "agent = Agent(snowflake_connection=snowpark, tools=snowflake_tools, max_retries=3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -291,26 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-13 17:24:22,280 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
+      "2025-05-15 14:08:49,731 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'output': 'The market cap of Apple is $3,019,131,060,224 or approximately $3.02 trillion.',\n",
+       "{'output': \"Apple's market cap is approximately $3.02 trillion.\",\n",
        " 'sources': [{'tool_type': 'cortex_analyst',\n",
        "   'tool_name': 'sp500_semantic_model_cortexanalyst',\n",
-       "   'metadata': [{'Table': 'cube_testing.public.sp500'}]}]}"
+       "   'metadata': [{'Table': 'spcs_of.spcs_schema.sp500'}]}]}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,26 +326,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-25 10:53:27,340 - AgentGatewayLogger - INFO - running margin_eval task\n"
+      "2025-05-15 14:09:06,637 - AgentGatewayLogger - INFO - running margin_eval task\n",
+      "2025-05-15 14:09:08,808 - AgentGatewayLogger - INFO - Replanning....\n",
+      "2025-05-15 14:09:11,671 - AgentGatewayLogger - INFO - running sp500_semantic_model_cortexanalyst task\n",
+      "2025-05-15 14:10:07,534 - AgentGatewayLogger - INFO - Replanning....\n",
+      "2025-05-15 14:10:10,172 - AgentGatewayLogger - INFO - running sec_search_service_cortexsearch task\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'output': 'The normalized EBITDA margin for Microsoft Corporation is approximately 0.3999 or 39.99%.',\n",
-       " 'sources': [{'tool_type': 'SQL',\n",
-       "   'tool_name': 'margin_eval',\n",
-       "   'metadata': [None]}]}"
+       "{'output': 'I apologize, but I need more information to calculate the normalized EBITDA margin for MSFT. While we have EBITDA data available, calculating a normalized margin would require specifying what to normalize against (e.g., revenue, total assets, etc.) and potentially what time period to use for normalization. Please clarify how you would like the EBITDA margin to be normalized. Consider rephrasing your request.',\n",
+       " 'sources': [{'tool_type': 'cortex_analyst',\n",
+       "   'tool_name': 'sp500_semantic_model_cortexanalyst',\n",
+       "   'metadata': [{'Table': None}]},\n",
+       "  {'tool_type': 'cortex_search',\n",
+       "   'tool_name': 'sec_search_service_cortexsearch',\n",
+       "   'metadata': [{'RELATIVE_PATH': '2023_10k_snowflake.pdf'},\n",
+       "    {'RELATIVE_PATH': '2021_10k_snowflake.pdf'},\n",
+       "    {'RELATIVE_PATH': '2024_10k_snowflake.pdf'},\n",
+       "    {'RELATIVE_PATH': '2022_10k_snowflake.pdf'}]}]}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -576,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
